058/mml_parser.output
Terminals unused in grammar

    tPRIVATE


Grammar

    0 $accept: file $end

    1 file: opt_decs
    2     | opt_decs main_program

    3 main_program: tBEGIN declarations instructions tEND
    4             | tBEGIN declarations tEND
    5             | tBEGIN instructions tEND
    6             | tBEGIN tEND

    7 declaration: type tIDENTIFIER opt_init ';'
    8            | auto tIDENTIFIER '=' expression ';'
    9            | qualifier type tIDENTIFIER opt_init ';'
   10            | qualifier auto tIDENTIFIER '=' expression ';'
   11            | qualifier tIDENTIFIER '=' expression ';'

   12 declarations: declaration
   13             | declarations declaration

   14 opt_decs: %empty
   15         | declarations

   16 qualifier: tFOREIGN
   17          | tFORWARD
   18          | tPUBLIC

   19 type: tTYPE_INTEGER
   20     | tTYPE_DOUBLE
   21     | tTYPE_STRING
   22     | tTYPE_VOID
   23     | '[' type ']'
   24     | type '<' '>'
   25     | type '<' types '>'

   26 auto: tAUTO

   27 types: type
   28      | types ',' type

   29 opt_init: %empty
   30         | '=' expression

   31 instruction: expression ';'
   32            | expressions tPRINT
   33            | expressions tPRINTLN
   34            | tSTOP ';'
   35            | tSTOP tINTEGER ';'
   36            | tNEXT ';'
   37            | tNEXT tINTEGER ';'
   38            | tRETURN expression ';'
   39            | cond_inst
   40            | iter_inst
   41            | block

   42 cond_inst: tIF '(' expression ')' instruction
   43          | tIF '(' expression ')' instruction elif

   44 elif: tELSE instruction
   45     | tELIF '(' expression ')' instruction
   46     | tELIF '(' expression ')' instruction elif

   47 iter_inst: tWHILE '(' expression ')' instruction

   48 instructions: instruction
   49             | instructions instruction

   50 expression: tINTEGER
   51           | tDOUBLE
   52           | string
   53           | tNULLPTR
   54           | '+' expression
   55           | '-' expression
   56           | tNOT expression
   57           | expression '+' expression
   58           | expression '-' expression
   59           | expression '*' expression
   60           | expression '/' expression
   61           | expression '%' expression
   62           | expression '<' expression
   63           | expression '>' expression
   64           | expression tGE expression
   65           | expression tLE expression
   66           | expression tNE expression
   67           | expression tEQ expression
   68           | expression tOR expression
   69           | expression tAND expression
   70           | lval
   71           | lval '=' expression
   72           | tINPUT
   73           | tSIZEOF '(' expression ')'
   74           | lval tADDRESS
   75           | '[' expression ']'
   76           | expression '(' opt_expressions ')'
   77           | '@' '(' opt_expressions ')'
   78           | '(' expression ')'
   79           | func_def

   80 expressions: expression
   81            | expressions ',' expression

   82 opt_expressions: %empty
   83                | expressions

   84 lval: tIDENTIFIER
   85     | expression '[' expression ']'

   86 arg: type tIDENTIFIER

   87 args: %empty
   88     | arg
   89     | args ',' arg

   90 block: '{' declarations instructions '}'
   91      | '{' declarations '}'
   92      | '{' instructions '}'
   93      | '{' '}'

   94 func_def: '(' args ')' tARROW type block
   95         | '(' args ')' tARROW auto block

   96 string: tSTRING
   97       | string tSTRING


Terminals, with rules where they appear

    $end (0) 0
    '%' (37) 61
    '(' (40) 42 43 45 46 47 73 76 77 78 94 95
    ')' (41) 42 43 45 46 47 73 76 77 78 94 95
    '*' (42) 59
    '+' (43) 54 57
    ',' (44) 28 81 89
    '-' (45) 55 58
    '/' (47) 60
    ';' (59) 7 8 9 10 11 31 34 35 36 37 38
    '<' (60) 24 25 62
    '=' (61) 8 10 11 30 71
    '>' (62) 24 25 63
    '@' (64) 77
    '[' (91) 23 75 85
    ']' (93) 23 75 85
    '{' (123) 90 91 92 93
    '}' (125) 90 91 92 93
    error (256)
    tIF (258) 42 43
    tBEGIN (259) 3 4 5 6
    tEND (260) 3 4 5 6
    tFOREIGN (261) 16
    tFORWARD (262) 17
    tPUBLIC (263) 18
    tAUTO (264) 26
    tPRIVATE (265)
    tINPUT (266) 72
    tPRINT (267) 32
    tPRINTLN (268) 33
    tWHILE (269) 47
    tSTOP (270) 34 35
    tNEXT (271) 36 37
    tRETURN (272) 38
    tSIZEOF (273) 73
    tTYPE_STRING (274) 21
    tTYPE_INTEGER (275) 19
    tTYPE_DOUBLE (276) 20
    tTYPE_VOID (277) 22
    tARROW (278) 94 95
    tINTEGER <i> (279) 35 37 50
    tDOUBLE <d> (280) 51
    tSTRING <s> (281) 96 97
    tNULLPTR <expression> (282) 53
    tIDENTIFIER <s> (283) 7 8 9 10 11 84 86
    tADDRESS (284) 74
    tOR (285) 68
    tAND (286) 69
    tNOT (287) 56
    tEQ (288) 67
    tNE (289) 66
    tLE (290) 65
    tGE (291) 64
    tUNARY (292)
    tIFX (293)
    tELIF (294) 45 46
    tELSE (295) 44


Nonterminals, with rules where they appear

    $accept (58)
        on left: 0
    file <sequence> (59)
        on left: 1 2
        on right: 0
    main_program <node> (60)
        on left: 3 4 5 6
        on right: 2
    declaration <node> (61)
        on left: 7 8 9 10 11
        on right: 12 13
    declarations <sequence> (62)
        on left: 12 13
        on right: 3 4 13 15 90 91
    opt_decs <sequence> (63)
        on left: 14 15
        on right: 1 2
    qualifier <i> (64)
        on left: 16 17 18
        on right: 9 10 11
    type <type> (65)
        on left: 19 20 21 22 23 24 25
        on right: 7 9 23 24 25 27 28 86 94
    auto <type> (66)
        on left: 26
        on right: 8 10 95
    types <type_vec> (67)
        on left: 27 28
        on right: 25 28
    opt_init <expression> (68)
        on left: 29 30
        on right: 7 9
    instruction <node> (69)
        on left: 31 32 33 34 35 36 37 38 39 40 41
        on right: 42 43 44 45 46 47 48 49
    cond_inst <node> (70)
        on left: 42 43
        on right: 39
    elif <node> (71)
        on left: 44 45 46
        on right: 43 46
    iter_inst <node> (72)
        on left: 47
        on right: 40
    instructions <sequence> (73)
        on left: 48 49
        on right: 3 5 49 90 92
    expression <expression> (74)
        on left: 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72 73 74 75 76 77 78 79
        on right: 8 10 11 30 31 38 42 43 45 46 47 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 71 73 75 76 78 80 81 85
    expressions <sequence> (75)
        on left: 80 81
        on right: 32 33 81 83
    opt_expressions <sequence> (76)
        on left: 82 83
        on right: 76 77
    lval <lvalue> (77)
        on left: 84 85
        on right: 70 71 74
    arg <vardec> (78)
        on left: 86
        on right: 88 89
    args <sequence> (79)
        on left: 87 88 89
        on right: 89 94 95
    block <block> (80)
        on left: 90 91 92 93
        on right: 41 94 95
    func_def <expression> (81)
        on left: 94 95
        on right: 79
    string <s> (82)
        on left: 96 97
        on right: 52 97


State 0

    0 $accept: . file $end

    tFOREIGN       shift, and go to state 1
    tFORWARD       shift, and go to state 2
    tPUBLIC        shift, and go to state 3
    tAUTO          shift, and go to state 4
    tTYPE_STRING   shift, and go to state 5
    tTYPE_INTEGER  shift, and go to state 6
    tTYPE_DOUBLE   shift, and go to state 7
    tTYPE_VOID     shift, and go to state 8
    '['            shift, and go to state 9

    $default  reduce using rule 14 (opt_decs)

    file          go to state 10
    declaration   go to state 11
    declarations  go to state 12
    opt_decs      go to state 13
    qualifier     go to state 14
    type          go to state 15
    auto          go to state 16


State 1

   16 qualifier: tFOREIGN .

    $default  reduce using rule 16 (qualifier)


State 2

   17 qualifier: tFORWARD .

    $default  reduce using rule 17 (qualifier)


State 3

   18 qualifier: tPUBLIC .

    $default  reduce using rule 18 (qualifier)


State 4

   26 auto: tAUTO .

    $default  reduce using rule 26 (auto)


State 5

   21 type: tTYPE_STRING .

    $default  reduce using rule 21 (type)


State 6

   19 type: tTYPE_INTEGER .

    $default  reduce using rule 19 (type)


State 7

   20 type: tTYPE_DOUBLE .

    $default  reduce using rule 20 (type)


State 8

   22 type: tTYPE_VOID .

    $default  reduce using rule 22 (type)


State 9

   23 type: '[' . type ']'

    tTYPE_STRING   shift, and go to state 5
    tTYPE_INTEGER  shift, and go to state 6
    tTYPE_DOUBLE   shift, and go to state 7
    tTYPE_VOID     shift, and go to state 8
    '['            shift, and go to state 9

    type  go to state 17


State 10

    0 $accept: file . $end

    $end  shift, and go to state 18


State 11

   12 declarations: declaration .

    $default  reduce using rule 12 (declarations)


State 12

   13 declarations: declarations . declaration
   15 opt_decs: declarations .

    tFOREIGN       shift, and go to state 1
    tFORWARD       shift, and go to state 2
    tPUBLIC        shift, and go to state 3
    tAUTO          shift, and go to state 4
    tTYPE_STRING   shift, and go to state 5
    tTYPE_INTEGER  shift, and go to state 6
    tTYPE_DOUBLE   shift, and go to state 7
    tTYPE_VOID     shift, and go to state 8
    '['            shift, and go to state 9

    $default  reduce using rule 15 (opt_decs)

    declaration  go to state 19
    qualifier    go to state 14
    type         go to state 15
    auto         go to state 16


State 13

    1 file: opt_decs .
    2     | opt_decs . main_program

    tBEGIN  shift, and go to state 20

    $default  reduce using rule 1 (file)

    main_program  go to state 21


State 14

    9 declaration: qualifier . type tIDENTIFIER opt_init ';'
   10            | qualifier . auto tIDENTIFIER '=' expression ';'
   11            | qualifier . tIDENTIFIER '=' expression ';'

    tAUTO          shift, and go to state 4
    tTYPE_STRING   shift, and go to state 5
    tTYPE_INTEGER  shift, and go to state 6
    tTYPE_DOUBLE   shift, and go to state 7
    tTYPE_VOID     shift, and go to state 8
    tIDENTIFIER    shift, and go to state 22
    '['            shift, and go to state 9

    type  go to state 23
    auto  go to state 24


State 15

    7 declaration: type . tIDENTIFIER opt_init ';'
   24 type: type . '<' '>'
   25     | type . '<' types '>'

    tIDENTIFIER  shift, and go to state 25
    '<'          shift, and go to state 26


State 16

    8 declaration: auto . tIDENTIFIER '=' expression ';'

    tIDENTIFIER  shift, and go to state 27


State 17

   23 type: '[' type . ']'
   24     | type . '<' '>'
   25     | type . '<' types '>'

    '<'  shift, and go to state 26
    ']'  shift, and go to state 28


State 18

    0 $accept: file $end .

    $default  accept


State 19

   13 declarations: declarations declaration .

    $default  reduce using rule 13 (declarations)


State 20

    3 main_program: tBEGIN . declarations instructions tEND
    4             | tBEGIN . declarations tEND
    5             | tBEGIN . instructions tEND
    6             | tBEGIN . tEND

    tIF            shift, and go to state 29
    tEND           shift, and go to state 30
    tFOREIGN       shift, and go to state 1
    tFORWARD       shift, and go to state 2
    tPUBLIC        shift, and go to state 3
    tAUTO          shift, and go to state 4
    tINPUT         shift, and go to state 31
    tWHILE         shift, and go to state 32
    tSTOP          shift, and go to state 33
    tNEXT          shift, and go to state 34
    tRETURN        shift, and go to state 35
    tSIZEOF        shift, and go to state 36
    tTYPE_STRING   shift, and go to state 5
    tTYPE_INTEGER  shift, and go to state 6
    tTYPE_DOUBLE   shift, and go to state 7
    tTYPE_VOID     shift, and go to state 8
    tINTEGER       shift, and go to state 37
    tDOUBLE        shift, and go to state 38
    tSTRING        shift, and go to state 39
    tNULLPTR       shift, and go to state 40
    tIDENTIFIER    shift, and go to state 41
    tNOT           shift, and go to state 42
    '+'            shift, and go to state 43
    '-'            shift, and go to state 44
    '@'            shift, and go to state 45
    '('            shift, and go to state 46
    '['            shift, and go to state 47
    '{'            shift, and go to state 48

    declaration   go to state 11
    declarations  go to state 49
    qualifier     go to state 14
    type          go to state 15
    auto          go to state 16
    instruction   go to state 50
    cond_inst     go to state 51
    iter_inst     go to state 52
    instructions  go to state 53
    expression    go to state 54
    expressions   go to state 55
    lval          go to state 56
    block         go to state 57
    func_def      go to state 58
    string        go to state 59


State 21

    2 file: opt_decs main_program .

    $default  reduce using rule 2 (file)


State 22

   11 declaration: qualifier tIDENTIFIER . '=' expression ';'

    '='  shift, and go to state 60


State 23

    9 declaration: qualifier type . tIDENTIFIER opt_init ';'
   24 type: type . '<' '>'
   25     | type . '<' types '>'

    tIDENTIFIER  shift, and go to state 61
    '<'          shift, and go to state 26


State 24

   10 declaration: qualifier auto . tIDENTIFIER '=' expression ';'

    tIDENTIFIER  shift, and go to state 62


State 25

    7 declaration: type tIDENTIFIER . opt_init ';'

    '='  shift, and go to state 63

    $default  reduce using rule 29 (opt_init)

    opt_init  go to state 64


State 26

   24 type: type '<' . '>'
   25     | type '<' . types '>'

    tTYPE_STRING   shift, and go to state 5
    tTYPE_INTEGER  shift, and go to state 6
    tTYPE_DOUBLE   shift, and go to state 7
    tTYPE_VOID     shift, and go to state 8
    '>'            shift, and go to state 65
    '['            shift, and go to state 9

    type   go to state 66
    types  go to state 67


State 27

    8 declaration: auto tIDENTIFIER . '=' expression ';'

    '='  shift, and go to state 68


State 28

   23 type: '[' type ']' .

    $default  reduce using rule 23 (type)


State 29

   42 cond_inst: tIF . '(' expression ')' instruction
   43          | tIF . '(' expression ')' instruction elif

    '('  shift, and go to state 69


State 30

    6 main_program: tBEGIN tEND .

    $default  reduce using rule 6 (main_program)


State 31

   72 expression: tINPUT .

    $default  reduce using rule 72 (expression)


State 32

   47 iter_inst: tWHILE . '(' expression ')' instruction

    '('  shift, and go to state 70


State 33

   34 instruction: tSTOP . ';'
   35            | tSTOP . tINTEGER ';'

    tINTEGER  shift, and go to state 71
    ';'       shift, and go to state 72


State 34

   36 instruction: tNEXT . ';'
   37            | tNEXT . tINTEGER ';'

    tINTEGER  shift, and go to state 73
    ';'       shift, and go to state 74


State 35

   38 instruction: tRETURN . expression ';'

    tINPUT       shift, and go to state 31
    tSIZEOF      shift, and go to state 36
    tINTEGER     shift, and go to state 37
    tDOUBLE      shift, and go to state 38
    tSTRING      shift, and go to state 39
    tNULLPTR     shift, and go to state 40
    tIDENTIFIER  shift, and go to state 41
    tNOT         shift, and go to state 42
    '+'          shift, and go to state 43
    '-'          shift, and go to state 44
    '@'          shift, and go to state 45
    '('          shift, and go to state 46
    '['          shift, and go to state 75

    expression  go to state 76
    lval        go to state 56
    func_def    go to state 58
    string      go to state 59


State 36

   73 expression: tSIZEOF . '(' expression ')'

    '('  shift, and go to state 77


State 37

   50 expression: tINTEGER .

    $default  reduce using rule 50 (expression)


State 38

   51 expression: tDOUBLE .

    $default  reduce using rule 51 (expression)


State 39

   96 string: tSTRING .

    $default  reduce using rule 96 (string)


State 40

   53 expression: tNULLPTR .

    $default  reduce using rule 53 (expression)


State 41

   84 lval: tIDENTIFIER .

    $default  reduce using rule 84 (lval)


State 42

   56 expression: tNOT . expression

    tINPUT       shift, and go to state 31
    tSIZEOF      shift, and go to state 36
    tINTEGER     shift, and go to state 37
    tDOUBLE      shift, and go to state 38
    tSTRING      shift, and go to state 39
    tNULLPTR     shift, and go to state 40
    tIDENTIFIER  shift, and go to state 41
    tNOT         shift, and go to state 42
    '+'          shift, and go to state 43
    '-'          shift, and go to state 44
    '@'          shift, and go to state 45
    '('          shift, and go to state 46
    '['          shift, and go to state 75

    expression  go to state 78
    lval        go to state 56
    func_def    go to state 58
    string      go to state 59


State 43

   54 expression: '+' . expression

    tINPUT       shift, and go to state 31
    tSIZEOF      shift, and go to state 36
    tINTEGER     shift, and go to state 37
    tDOUBLE      shift, and go to state 38
    tSTRING      shift, and go to state 39
    tNULLPTR     shift, and go to state 40
    tIDENTIFIER  shift, and go to state 41
    tNOT         shift, and go to state 42
    '+'          shift, and go to state 43
    '-'          shift, and go to state 44
    '@'          shift, and go to state 45
    '('          shift, and go to state 46
    '['          shift, and go to state 75

    expression  go to state 79
    lval        go to state 56
    func_def    go to state 58
    string      go to state 59


State 44

   55 expression: '-' . expression

    tINPUT       shift, and go to state 31
    tSIZEOF      shift, and go to state 36
    tINTEGER     shift, and go to state 37
    tDOUBLE      shift, and go to state 38
    tSTRING      shift, and go to state 39
    tNULLPTR     shift, and go to state 40
    tIDENTIFIER  shift, and go to state 41
    tNOT         shift, and go to state 42
    '+'          shift, and go to state 43
    '-'          shift, and go to state 44
    '@'          shift, and go to state 45
    '('          shift, and go to state 46
    '['          shift, and go to state 75

    expression  go to state 80
    lval        go to state 56
    func_def    go to state 58
    string      go to state 59


State 45

   77 expression: '@' . '(' opt_expressions ')'

    '('  shift, and go to state 81


State 46

   78 expression: '(' . expression ')'
   94 func_def: '(' . args ')' tARROW type block
   95         | '(' . args ')' tARROW auto block

    tINPUT         shift, and go to state 31
    tSIZEOF        shift, and go to state 36
    tTYPE_STRING   shift, and go to state 5
    tTYPE_INTEGER  shift, and go to state 6
    tTYPE_DOUBLE   shift, and go to state 7
    tTYPE_VOID     shift, and go to state 8
    tINTEGER       shift, and go to state 37
    tDOUBLE        shift, and go to state 38
    tSTRING        shift, and go to state 39
    tNULLPTR       shift, and go to state 40
    tIDENTIFIER    shift, and go to state 41
    tNOT           shift, and go to state 42
    '+'            shift, and go to state 43
    '-'            shift, and go to state 44
    '@'            shift, and go to state 45
    '('            shift, and go to state 46
    '['            shift, and go to state 47

    $default  reduce using rule 87 (args)

    type        go to state 82
    expression  go to state 83
    lval        go to state 56
    arg         go to state 84
    args        go to state 85
    func_def    go to state 58
    string      go to state 59


State 47

   23 type: '[' . type ']'
   75 expression: '[' . expression ']'

    tINPUT         shift, and go to state 31
    tSIZEOF        shift, and go to state 36
    tTYPE_STRING   shift, and go to state 5
    tTYPE_INTEGER  shift, and go to state 6
    tTYPE_DOUBLE   shift, and go to state 7
    tTYPE_VOID     shift, and go to state 8
    tINTEGER       shift, and go to state 37
    tDOUBLE        shift, and go to state 38
    tSTRING        shift, and go to state 39
    tNULLPTR       shift, and go to state 40
    tIDENTIFIER    shift, and go to state 41
    tNOT           shift, and go to state 42
    '+'            shift, and go to state 43
    '-'            shift, and go to state 44
    '@'            shift, and go to state 45
    '('            shift, and go to state 46
    '['            shift, and go to state 47

    type        go to state 17
    expression  go to state 86
    lval        go to state 56
    func_def    go to state 58
    string      go to state 59


State 48

   90 block: '{' . declarations instructions '}'
   91      | '{' . declarations '}'
   92      | '{' . instructions '}'
   93      | '{' . '}'

    tIF            shift, and go to state 29
    tFOREIGN       shift, and go to state 1
    tFORWARD       shift, and go to state 2
    tPUBLIC        shift, and go to state 3
    tAUTO          shift, and go to state 4
    tINPUT         shift, and go to state 31
    tWHILE         shift, and go to state 32
    tSTOP          shift, and go to state 33
    tNEXT          shift, and go to state 34
    tRETURN        shift, and go to state 35
    tSIZEOF        shift, and go to state 36
    tTYPE_STRING   shift, and go to state 5
    tTYPE_INTEGER  shift, and go to state 6
    tTYPE_DOUBLE   shift, and go to state 7
    tTYPE_VOID     shift, and go to state 8
    tINTEGER       shift, and go to state 37
    tDOUBLE        shift, and go to state 38
    tSTRING        shift, and go to state 39
    tNULLPTR       shift, and go to state 40
    tIDENTIFIER    shift, and go to state 41
    tNOT           shift, and go to state 42
    '+'            shift, and go to state 43
    '-'            shift, and go to state 44
    '@'            shift, and go to state 45
    '('            shift, and go to state 46
    '['            shift, and go to state 47
    '{'            shift, and go to state 48
    '}'            shift, and go to state 87

    declaration   go to state 11
    declarations  go to state 88
    qualifier     go to state 14
    type          go to state 15
    auto          go to state 16
    instruction   go to state 50
    cond_inst     go to state 51
    iter_inst     go to state 52
    instructions  go to state 89
    expression    go to state 54
    expressions   go to state 55
    lval          go to state 56
    block         go to state 57
    func_def      go to state 58
    string        go to state 59


State 49

    3 main_program: tBEGIN declarations . instructions tEND
    4             | tBEGIN declarations . tEND
   13 declarations: declarations . declaration
